<resources>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copyUrl">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="defaultVoiceMailAlphaTag">Voicemail</string>
    <string name="defaultMsisdnAlphaTag">MSISDN1</string>
    <string name="emptyPhoneNumber">(No phone number)</string>
    <string name="httpErrorBadUrl">The page could not be opened because the URL is invalid.</string>
    <string name="httpErrorUnsupportedScheme">The protocol is not supported.</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="paste">Paste</string>
    <string name="search_go">Search</string>
    <string name="selectAll">Select all</string>
    <string name="unknownName">(Unknown)</string>
    <string name="untitled">&lt;untitled></string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_unknown">This video cannot be played.</string>
    <string name="VideoView_error_title">Video problem</string>
    <string name="yes">OK</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="VideoView_error_text_invalid_progressive_playback">This video is invalid for playing in this device.</string>
    <string name="selectTextMode">Select text...</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="jrdtheme_holo">Holo</string>
    <string name="jrdtheme_DNA">DNA</string>
    <string name="config_ethernet_iface_regex">eth\\d</string>
    <string name="config_tether_apndata" />
    <string name="config_wifi_p2p_device_type">10-0050F204-5</string>
    <string name="widget_default_package_name" />
    <string name="widget_default_class_name" />
    <string name="default_wallpaper_component">@null</string>
    <string name="config_datause_iface">rmnet0</string>
    <string name="config_default_dns_server">8.8.8.8</string>
    <string name="gsm_alphabet_default_charset" />
    <string name="db_default_journal_mode">PERSIST</string>
    <string name="db_default_sync_mode">FULL</string>
    <string name="db_wal_sync_mode">FULL</string>
    <string name="config_useragentprofile_url" />
    <string name="config_isoImagePath" />
    <string name="config_ntpServer">asia.pool.ntp.org</string>
    <string name="config_wimaxServiceJarLocation" />
    <string name="config_wimaxNativeLibLocation" />
    <string name="config_wimaxManagerClassname" />
    <string name="config_wimaxServiceClassname" />
    <string name="config_wimaxStateTrackerClassname" />
    <string name="config_dreamsDefaultComponent">com.android.dreams.basic/com.android.dreams.basic.Colors</string>
    <string name="hour_minute_24" formatted="false">%H:%M</string>
    <string name="hour_minute_ampm" formatted="false">%-l:%M%p</string>
    <string name="hour_minute_cap_ampm" formatted="false">%-l:%M%^p</string>
    <string name="twelve_hour_time_format">h:mm a</string>
    <string name="twenty_four_hour_time_format">HH:mm</string>
    <string name="numeric_date" formatted="false">%-m/%-e/%Y</string>
    <string name="numeric_date_format">M/d/yyyy</string>
    <string name="numeric_date_template" formatted="false">%s/%s/%s</string>
    <string name="month_day_year" formatted="false">%B %-e, %Y</string>
    <string name="time_of_day" formatted="false">%-l:%M:%S %p</string>
    <string name="date_and_time" formatted="false">%b %-e, %Y, %-l:%M:%S %p</string>
    <string name="date_time">%1$s, %2$s</string>
    <string name="time_date">%1$s, %3$s</string>
    <string name="abbrev_month_day_year" formatted="false">%b %-e, %Y</string>
    <string name="month_day" formatted="false">%B %-e</string>
    <string name="month">%-B</string>
    <string name="month_year" formatted="false">%B %Y</string>
    <string name="abbrev_month_day" formatted="false">%b %-e</string>
    <string name="abbrev_month">%-b</string>
    <string name="abbrev_month_year" formatted="false">%b %Y</string>
    <string name="time1_time2">%1$s – %2$s</string>
    <string name="date1_date2">%2$s – %5$s</string>
    <string name="numeric_md1_md2">%2$s/%3$s – %7$s/%8$s</string>
    <string name="numeric_wday1_md1_wday2_md2">%1$s, %2$s/%3$s – %6$s, %7$s/%8$s</string>
    <string name="numeric_mdy1_mdy2">%2$s/%3$s/%4$s – %7$s/%8$s/%9$s</string>
    <string name="numeric_wday1_mdy1_wday2_mdy2">%1$s, %2$s/%3$s/%4$s – %6$s, %7$s/%8$s/%9$s</string>
    <string name="numeric_wday1_mdy1_time1_wday2_mdy2_time2">%1$s, %2$s/%3$s/%4$s, %5$s – %6$s, %7$s/%8$s/%9$s, %10$s</string>
    <string name="numeric_md1_time1_md2_time2">%2$s/%3$s, %5$s – %7$s/%8$s, %10$s</string>
    <string name="numeric_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s/%3$s, %5$s – %6$s, %7$s/%8$s, %10$s</string>
    <string name="numeric_mdy1_time1_mdy2_time2">%2$s/%3$s/%4$s, %5$s – %7$s/%8$s/%9$s, %10$s</string>
    <string name="wday1_date1_time1_wday2_date2_time2">%1$s, %2$s, %3$s – %4$s, %5$s, %6$s</string>
    <string name="wday1_date1_wday2_date2">%1$s, %2$s – %4$s, %5$s</string>
    <string name="date1_time1_date2_time2">%2$s, %3$s – %5$s, %6$s</string>
    <string name="time_wday_date">%1$s, %2$s, %3$s</string>
    <string name="wday_date">%2$s, %3$s</string>
    <string name="time_wday">%1$s, %2$s</string>
    <string name="same_year_md1_md2">%2$s %3$s – %7$s %8$s</string>
    <string name="same_year_wday1_md1_wday2_md2">%1$s, %2$s %3$s – %6$s, %7$s %8$s</string>
    <string name="same_year_md1_time1_md2_time2">%2$s %3$s, %5$s – %7$s %8$s, %10$s</string>
    <string name="same_month_md1_time1_md2_time2">%2$s %3$s, %5$s – %7$s %8$s, %10$s</string>
    <string name="same_year_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s %3$s, %5$s – %6$s, %7$s %8$s, %10$s</string>
    <string name="same_month_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s %3$s, %5$s – %6$s, %7$s %8$s, %10$s</string>
    <string name="same_year_mdy1_time1_mdy2_time2">%2$s %3$s, %4$s, %5$s – %7$s %8$s, %9$s, %10$s</string>
    <string name="same_month_mdy1_time1_mdy2_time2">%2$s %3$s, %4$s, %5$s – %7$s %8$s, %9$s, %10$s</string>
    <string name="same_year_wday1_mdy1_time1_wday2_mdy2_time2">%1$s, %2$s %3$s, %4$s, %5$s – %6$s, %7$s %8$s, %9$s, %10$s</string>
    <string name="same_month_wday1_mdy1_time1_wday2_mdy2_time2">%1$s, %2$s %3$s, %4$s, %5$s – %6$s, %7$s %8$s, %9$s, %10$s</string>
    <string name="same_month_wday1_mdy1_wday2_mdy2">%1$s, %2$s %3$s, %4$s – %6$s, %7$s %8$s, %9$s</string>
    <string name="same_month_md1_md2">%2$s %3$s – %8$s</string>
    <string name="same_month_wday1_md1_wday2_md2">%1$s, %2$s %3$s – %6$s, %7$s %8$s</string>
    <string name="same_year_mdy1_mdy2">%2$s %3$s – %7$s %8$s, %9$s</string>
    <string name="same_month_mdy1_mdy2">%2$s %3$s – %8$s, %9$s</string>
    <string name="same_year_wday1_mdy1_wday2_mdy2">%1$s, %2$s %3$s – %6$s, %7$s %8$s, %9$s</string>
    <string name="short_format_month">%b</string>
    <string name="full_wday_month_day_no_year">EEEE, MMMM d</string>
    <string name="abbrev_wday_month_day_no_year">EEE, MMMM d</string>
    <string name="abbrev_wday_month_day_year">EEE, MMM d, yyyy</string>
    <string name="common_name_prefixes" />
    <string name="common_name_suffixes" />
    <string name="common_last_name_prefixes" />
    <string name="common_name_conjunctions" />
    <string name="default_text_encoding">Latin-1</string>
    <string name="lock_pattern_view_aspect">square</string>
    <string name="time_picker_separator">:</string>
    <string name="api_enable_wifi">enable wifi</string>
    <string name="api_enable_mobile_data">enable mobile data</string>
    <string name="api_enable_nfc">enable nfc</string>
    <string name="api_enable_blue_tooth">enable blue tooth</string>
    <string name="api_enable_gps_location">enable gps location</string>
    <string name="api_take_picture">take picture</string>
    <string name="api_open_camera">open camera device</string>
    <string name="api_video_record">record video</string>
    <string name="api_audio_record">record sound</string>
    <string name="api_call_phone">call phone</string>
    <string name="api_read_smsmms_data">read sms and mms data</string>
    <string name="api_write_smsmms_data">write sms and mms data</string>
    <string name="api_delete_smsmms_data">delete smsmms data</string>
    <string name="api_read_sms">read sms</string>
    <string name="api_send_sms">send sms</string>
    <string name="api_read_mms">read mms</string>
    <string name="api_send_mms">send mms</string>
    <string name="api_read_contacts">read contacts</string>
    <string name="api_write_contacts">write contacts</string>
    <string name="api_upate_contacts">update contacts</string>
    <string name="api_delete_contacts">delete contacts</string>
    <string name="api_read_call_log">read call log</string>
    <string name="api_update_call_log">update call log</string>
    <string name="api_delete_call_log">delete call log</string>
    <string name="cta_dialog_format" formatted="false">application %s will %s</string>
    <string name="cta_toast_format" formatted="false">application %s can not %s, it have been banned!</string>
    <string name="cta_dialog_title">Security warning</string>
    <string name="cta_dialog_always">Remember my choice</string>
    <string name="cta_dialog_ok">Alow</string>
    <string name="cta_dialog_no">Deny</string>
    <string name="cta_dataconnection_warning">The data connection will be openned, maybe it will spend your money!</string>
    <string name="def_sms_voice_mail_name" />
    <string name="def_sim1_phone_voice_mail_number">0</string>
    <string name="def_sim2_phone_voice_mail_number">0</string>
    <string name="Def_framework_wifi_disconnect_threshold">-100</string>
    <string name="Def_framework_wifi_channel_config">EU</string>
    <string name="Def_framework_softap_ssid">Alcatel_</string>
    <string name="Def_framework_wifi_ap_security">WPA PSK</string>
    <string name="Def_framework_wifi_ap_ssid">ALCATEL ONETOUCH IDOL X+</string>
    <string name="Def_framework_wifi_ap_passward">Aa123456</string>
    <string name="def_frameworks_default_input_method">com.cootek.smartinputv5.oem/com.cootek.smartinput5.TouchPalIME</string>
    <string name="def_framework_windowanimationscale">1.0</string>
    <string name="def_framework_transitionanimationscale">0.5</string>
    <string name="tether_dun_apn_cust1" />
    <string name="tether_dun_apn_cust2" />
    <string name="tether_dun_apn_cust3" />
    <string name="tether_dun_apn_cust4" />
    <string name="tether_dun_apn_cust5" />
    <string name="Def_framework_wifi_direct_name">Android_</string>
    <string name="def_framework_dataroaming">false</string>
    <string name="def_framework_dataroaming2">false</string>
    <string name="byteShort">B</string>
    <string name="kilobyteShort">KB</string>
    <string name="megabyteShort">MB</string>
    <string name="gigabyteShort">GB</string>
    <string name="terabyteShort">TB</string>
    <string name="petabyteShort">PB</string>
    <string name="fileSizeSuffix">%1$s%2$s</string>
    <string name="ellipsis">…</string>
    <string name="ellipsis_two_dots">‥</string>
    <string name="mmiError">Connection or MMI code error.</string>
    <string name="mmiFdnError">Operation barred, fixed dialling numbers only.</string>
    <string name="serviceEnabled">Service was enabled.</string>
    <string name="serviceEnabledFor">Service was enabled for:</string>
    <string name="serviceDisabled">Service has been disabled.</string>
    <string name="serviceRegistered">Registration was successful.</string>
    <string name="keyguard_pinch_guide_text">Pinch two fingers to go to the screen on which widgets could be reordered.</string>
    <string name="keyguard_drag_guide_text">Pull down to see large widget</string>
    <string name="keyguard_long_press_guide_text">Touch and hold the widget to edit the widgets</string>
    <string name="keyguard_unlock_guide_text">Drag down to unlock</string>
</resources>