<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:id="@id/keyguard_pinch_guide_line" android:background="@drawable/bg_cling" android:paddingLeft="25.0dip" android:paddingTop="30.0dip" android:paddingRight="25.0dip" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:keepScreenOn="true">
        <TextView android:textSize="20.0sp" android:textColor="@color/keyguard_blue_tips" android:gravity="center" android:id="@id/pinch_indicate" android:paddingLeft="25.0dip" android:paddingRight="25.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/keyguard_pinch_guide_text" android:layout_centerHorizontal="true" />
        <ImageView android:id="@id/pinch_pic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-10.0dip" android:src="@drawable/keyguard_pinch_guide" android:scaleType="centerInside" android:layout_below="@id/pinch_indicate" android:layout_centerHorizontal="true" />
        <Button android:textColor="#ff000000" android:id="@id/pinch_ok" android:background="@drawable/cling_button_bg" android:paddingLeft="35.0dip" android:paddingTop="10.0dip" android:paddingRight="35.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/ok" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout android:orientation="vertical" android:id="@id/keyguard_drag_guide_line" android:background="@drawable/bg_cling" android:paddingLeft="25.0dip" android:paddingTop="30.0dip" android:paddingRight="25.0dip" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:keepScreenOn="true">
        <TextView android:textSize="20.0sp" android:textColor="@color/keyguard_blue_tips" android:gravity="center" android:id="@id/drag_indicate" android:paddingLeft="25.0dip" android:paddingRight="25.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/keyguard_drag_guide_text" android:layout_centerHorizontal="true" />
        <ImageView android:id="@id/drag_pic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/keyguard_drag_guide" android:scaleType="centerInside" android:layout_below="@id/drag_indicate" android:layout_centerHorizontal="true" />
        <Button android:textColor="#ff000000" android:id="@id/drag_ok" android:background="@drawable/cling_button_bg" android:paddingLeft="35.0dip" android:paddingTop="10.0dip" android:paddingRight="35.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/ok" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout android:orientation="vertical" android:id="@id/keyguard_long_press_guide_line" android:background="@drawable/bg_cling" android:paddingLeft="25.0dip" android:paddingTop="30.0dip" android:paddingRight="25.0dip" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="20.0sp" android:textColor="@color/keyguard_blue_tips" android:gravity="center" android:id="@id/long_press_indicate" android:paddingLeft="25.0dip" android:paddingRight="25.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keyguard_long_press_guide_text" android:layout_centerHorizontal="true" />
        <ImageView android:id="@id/long_cling_pic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:src="@drawable/keyguard_cling" android:scaleType="centerInside" android:layout_below="@id/long_press_indicate" android:layout_centerHorizontal="true" />
        <ImageView android:id="@id/long_press_pic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-120.0dip" android:layout_marginRight="40.0dip" android:src="@drawable/keyguard_long_press_guide" android:scaleType="centerInside" android:layout_below="@id/long_cling_pic" android:layout_alignParentRight="true" />
        <Button android:textColor="#ff000000" android:id="@id/long_press_ok" android:background="@drawable/cling_button_bg" android:paddingLeft="35.0dip" android:paddingTop="10.0dip" android:paddingRight="35.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/ok" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout android:orientation="vertical" android:id="@id/keyguard_unlock_guide_line" android:background="@drawable/bg_cling1" android:paddingLeft="25.0dip" android:paddingTop="30.0dip" android:paddingRight="25.0dip" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:textColor="#ff000000" android:id="@id/unlock_ok" android:background="@drawable/cling_button_bg" android:paddingLeft="35.0dip" android:paddingTop="10.0dip" android:paddingRight="35.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/ok" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
        <ImageView android:id="@id/unlock_pic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:layout_marginBottom="-70.0dip" android:src="@drawable/keyguard_drag_guide" android:scaleType="centerInside" android:layout_toLeftOf="@id/unlock_ok" android:layout_above="@id/unlock_ok" android:layout_centerHorizontal="true" />
        <TextView android:textSize="20.0sp" android:textColor="@color/keyguard_blue_tips" android:gravity="center" android:id="@id/unlock_indicate" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="120.0dip" android:text="@string/keyguard_unlock_guide_text" android:layout_above="@id/unlock_pic" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</merge>